--- a/collegejuggad/templates/footer.html
+++ b/collegejuggad/templates/footer.html
@@ -24,7 +24,7 @@
 						<h2 class="widget-title">Pages</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
+							<li><a href="{% url 'about' %}">About</a></li>
 							<li><a href="services.html">Shop</a></li>
 							<li><a href="news.html">News</a></li>
 							<li><a href="contact.html">Contact</a></li>
