--- a/collegejuggad/templates/footer.html
+++ b/collegejuggad/templates/footer.html
@@ -27,7 +27,7 @@
 							<li><a href="{% url 'about' %}">About</a></li>
 							<li><a href="services.html">Shop</a></li>
 							<li><a href="news.html">News</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="{% url 'contact' %}">Contact</a></li>
 						</ul>
 					</div>
 				</div>
