--- a/collegejuggad/templates/navbar.html
+++ b/collegejuggad/templates/navbar.html
@@ -14,7 +14,7 @@
 					<div class="main-menu-wrap">
 						<!-- logo -->
 						<div class="site-logo">
-							<a href="index.html">
+							<a href="{% url 'index' %}">
 								<img src="{% static 'img/logo.png' %}" alt="">
 							</a>
 						</div>
@@ -23,43 +23,20 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="#">Home</a>
-									<ul class="sub-menu">
-										<li><a href="index.html">Static Home</a></li>
-										<li><a href="index_2.html">Slider Home</a></li>
-									</ul>
-								</li>
+								<li class="current-list-item"><a href="{% url 'index'% }">Home</a></li>
 								<li><a href="{% url 'about' %}">About</a></li>
-								<li><a href="#">Pages</a>
+								<li><a href="#">Categories</a>
 									<ul class="sub-menu">
-										<li><a href="404.html">404 page</a></li>
-										<li><a href="{% url 'about' %}">About</a></li>
-										<li><a href="cart.html">Cart</a></li>
-										<li><a href="checkout.html">Check Out</a></li>
-										<li><a href="{% url 'contact' %}">Contact</a></li>
-										<li><a href="news.html">News</a></li>
-										<li><a href="shop.html">Shop</a></li>
-									</ul>
-								</li>
-								<li><a href="news.html">News</a>
-									<ul class="sub-menu">
-										<li><a href="news.html">News</a></li>
-										<li><a href="single-news.html">Single News</a></li>
+										<li><a href="404.html">Latest</a></li>
+										<li><a href="{% url 'about' %}">Popular</a></li>
+										<li><a href="cart.html">Update</a></li>
+										<li><a href="checkout.html">News</a></li>
 									</ul>
 								</li>
 								<li><a href="{% url 'contact' %}">Contact</a></li>
-								<li><a href="shop.html">Shop</a>
-									<ul class="sub-menu">
-										<li><a href="shop.html">Shop</a></li>
-										<li><a href="checkout.html">Check Out</a></li>
-										<li><a href="single-product.html">Single Product</a></li>
-										<li><a href="cart.html">Cart</a></li>
-									</ul>
-								</li>
 								<li>
 									<div class="header-icons">
-										<a class="shopping-cart" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
-										<a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
+										<a class="mobile-hide search-bar-icon" href="#">Search<i class="fas fa-search"></i></a>
 									</div>
 								</li>
 							</ul>
