--- a/collegejuggad/templates/index.html
+++ b/collegejuggad/templates/index.html
@@ -13,7 +13,7 @@
 							{% if m is not none %}
 							<h1>Welcome Nitesh</h1>
 							<div class="hero-btns">
-								<a href="shop.html" class="boxed-btn">Write Blogs</a>
+								<a href="{% url 'blog_write' %}" class="boxed-btn">Write Blogs</a>
 								<a href="contact.html" class="bordered-btn">Logout</a>
 							</div>
 							{% else %}
