--- a/collegejuggad/templates/blog_write.html
+++ b/collegejuggad/templates/blog_write.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
+{% load static %}
+{% include 'header.html' %}
+<script src="https://cdn.ckeditor.com/4.16.0/standard/ckeditor.js"></script>
+<div class="main">
+    <form action="blog_write" method="POST" enctype="multipart/form-data">
+        <h4>Title of the post</h4>
+        <input name="title" placeholder="">
+        <h5>Featured Images</h5>
+        <div class="input-field file-field">
+        <div class="btn">blog_write
+        Upload file
+        <input type="file" name="image">
+        </div>
+        <div class="file-path-wrapper">
+        <input type="text" class="file-path"></div>
+        </div>
+        <br>
+        <br>
+        <h4>Content area </h4>
+        <textarea name="editor1"></textarea>
+        <div class="center">
+            <input type="submit" value="Publish" name="publish" class="btn white-text">
+        </div>
+    </form>
+</div>
 
-	<!-- title -->
-	<title>Shop</title>
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
-	<script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
 
-</head>
-<body>
-<textarea id="MyID"></textarea>
-<script>
-var simplemde = new SimpleMDE({ element: document.getElementById("MyID") });
-</script>
-</body>
-</html>
+
+
+                <script>
+                        CKEDITOR.replace( 'editor1' );
+                </script>
