Avatar Image Updated

--- a/collegejuggad/templates/about.html
+++ b/collegejuggad/templates/about.html
@@ -146,7 +146,7 @@
 					<div class="testimonial-sliders">
 						<div class="single-testimonial-slider">
 							<div class="client-avater">
-								<img src="{% static 'img/avaters/avatar2.png' %}" alt="">
+								<img src="{% static 'img/avaters/ %}" alt="">
 							</div>
 							<div class="client-meta">
 								<h3>Saira Hakim <span>Local shop owner</span></h3>
@@ -160,7 +160,7 @@
 						</div>
 						<div class="single-testimonial-slider">
 							<div class="client-avater">
-								<img src="{% static 'img/avaters/avatar2.png' %}" alt="">
+								<img src="{% static 'img/avaters/avatar2.jpg' %}" alt="">
 							</div>
 							<div class="client-meta">
 								<h3>David Niph <span>Local shop owner</span></h3>
@@ -174,7 +174,7 @@
 						</div>
 						<div class="single-testimonial-slider">
 							<div class="client-avater">
-								<img src="{% static 'img/avaters/avatar2.png' %}" alt="">
+								<img src="{% static 'img/avaters/avatar2.jpg' %}" alt="">
 							</div>
 							<div class="client-meta">
 								<h3>Jacob Sikim <span>Local shop owner</span></h3>
