--- a/collegejuggad/templates/single-news.html
+++ b/collegejuggad/templates/single-news.html
@@ -73,7 +73,7 @@
 							<div class="comment-list">
 								<div class="single-comment-body">
 									<div class="comment-user-avater">
-										<img src="{% static 'img/avaters/avatar1.png' %}" alt="">
+										<img src="{% static 'img/avaters/avatar1.jpg' %}" alt="">
 									</div>
 									<div class="comment-text-body">
 										<h4>Jenny Joe <span class="comment-date">Aprl 26, 2020</span> <a href="#">reply</a></h4>
@@ -81,7 +81,7 @@
 									</div>
 									<div class="single-comment-body child">
 										<div class="comment-user-avater">
-											<img src="{% static 'img/avaters/avatar3.png' %}" alt="">
+											<img src="{% static 'img/avaters/avatar3.jpg' %}" alt="">
 										</div>
 										<div class="comment-text-body">
 											<h4>Simon Soe <span class="comment-date">Aprl 27, 2020</span> <a href="#">reply</a></h4>
@@ -91,7 +91,7 @@
 								</div>
 								<div class="single-comment-body">
 									<div class="comment-user-avater">
-										<img src="{% static 'img/avaters/avatar2.png' %}" alt="">
+										<img src="{% static 'img/avaters/avatar2.jpg' %}" alt="">
 									</div>
 									<div class="comment-text-body">
 										<h4>Addy Aoe <span class="comment-date">May 12, 2020</span> <a href="#">reply</a></h4>
