--- a/collegejuggad/templates/about.html
+++ b/collegejuggad/templates/about.html
@@ -146,7 +146,7 @@
 					<div class="testimonial-sliders">
 						<div class="single-testimonial-slider">
 							<div class="client-avater">
-								<img src="{% static 'img/avaters/ %}" alt="">
+								<img src="{% static 'img/avaters/avatar1.jpg' %}" alt="">
 							</div>
 							<div class="client-meta">
 								<h3>Saira Hakim <span>Local shop owner</span></h3>
